feat: class PostParse add inputMarkdown and corresponding test case

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/isaaxite/deploy-posts-to-github-issue#readme",
   "dependencies": {
+    "fast-glob": "^3.2.12",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
     "js-yaml": "^4.1.0",
