--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/isaaxite/deploy-posts-to-github-issue#readme",
   "dependencies": {
     "fast-glob": "^3.2.12",
+    "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
     "js-yaml": "^4.1.0",
