--- a/__test__/conf.yml
+++ b/__test__/conf.yml
@@ -1,3 +1,6 @@
+owner: isaaxite
+repo: test-repo_deploy-posts-to-github-issue
+token: $GITHUB_TOKEN
 post_dir: __test__/temp/source/**/*.md
 prefix: https://isaaxite.github.io/blog/resources/
 asset_dir: '{filename}'
