--- a/__test__/conf.yml
+++ b/__test__/conf.yml
@@ -2,7 +2,7 @@ owner: isaaxite
 repo: test-repo_deploy-posts-to-github-issue
 token: $GITHUB_TOKEN
 source_dir: __test__/temp/source/**/*.md
-prefix: https://isaaxite.github.io/blog/resources/
+link_prefix: https://isaaxite.github.io/blog/resources/
 asset_dir: '{filename}'
 types: 
   - image
