--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
   },
   "homepage": "https://github.com/isaaxite/deploy-posts-to-github-issue#readme",
   "dependencies": {
+    "@inquirer/prompts": "^2.1.1",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
     "js-yaml": "^4.1.0",
     "octokit": "^2.0.19",
+    "ora": "^6.3.1",
     "remark-frontmatter": "^4.0.1",
     "remark-parse": "^10.0.2",
     "remark-stringify": "^10.0.3",
+    "spinnies": "^0.5.1",
     "unified": "^10.1.2",
     "yargs": "^17.7.2"
   },
