feat: auto push post and corresponding assets with git

--- a/assets/conf.template.yml
+++ b/assets/conf.template.yml
@@ -72,3 +72,6 @@ token: ''
 ## Currently supports two formats of "image" and "link", the default is only "image" format.
 # types: 
 #   - image
+
+
+auto_push_asset: false
