--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@inquirer/prompts": "^2.1.1",
     "chalk": "^5.2.0",
+    "esm": "^3.2.25",
     "fast-glob": "^3.2.12",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
