--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "homepage": "https://github.com/isaaxite/deploy-posts-to-github-issue#readme",
   "dependencies": {
-    "@inquirer/prompts": "^2.1.1",
     "chalk": "^5.2.0",
     "esm": "^3.2.25",
     "fast-glob": "^3.2.12",
@@ -44,6 +43,7 @@
     "js-yaml": "^4.1.0",
     "octokit": "^2.0.19",
     "ora": "^6.3.1",
+    "prompts": "^2.4.2",
     "remark-frontmatter": "^4.0.1",
     "remark-parse": "^10.0.2",
     "remark-stringify": "^10.0.3",
