feat: add dev test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "jest",
     "esm-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "only-test": "npm run esm-test && git checkout reports/",
+    "only-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.dev.config.mjs",
     "update-test-reports": "npm run esm-test && git add ./reports && git commit -m 'update test reports'"
   },
   "repository": {
