--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,6 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch Isubo",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/scripts/isubo.debug.js"
-    },
     // {
     //   "type": "node",
     //   "request": "launch",
@@ -20,7 +11,16 @@
     //   "skipFiles": [
     //     "<node_internals>/**"
     //   ],
-    //   "program": "${workspaceFolder}/scripts/temp.debug.js"
-    // }
+    //   "program": "${workspaceFolder}/scripts/isubo.debug.js"
+    // },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Isubo",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/scripts/temp.debug.js"
+    }
   ]
 }
