--- a/__test__/assets/isubo.conf.yml
+++ b/__test__/assets/isubo.conf.yml
@@ -72,3 +72,16 @@ source_dir: __test__/source/
 ## Currently supports two formats of "image" and "link", the default is only "image" format.
 # types: 
 #   - image
+
+
+
+## [optional]
+## Isubo use directory name or filename at post path as post title
+## By default, filename is used as the title of the post
+## You can set it with `post_title_seat`
+## e.g.
+## /home/issue-blog/source/license.md
+## 0: license
+## 1: source
+## 2: isubo-blog
+post_title_seat: 0
