--- a/assets/conf.template.yml
+++ b/assets/conf.template.yml
@@ -93,3 +93,15 @@ token: ''
 #push_asset: prompt
 
 hide_frontmatter: true
+
+
+## [optional]
+## Isubo use directory name or filename at post path as post title
+## By default, filename is used as the title of the post
+## You can set it with `post_title_seat`
+## e.g.
+## /home/issue-blog/source/license.md
+## 0: license
+## 1: source
+## 2: isubo-blog
+post_title_seat: 0
