--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "deploy-posts-to-github-issue",
+  "name": "isubo",
   "version": "0.0.9",
   "description": "deploy posts are written in markdown to github issue",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
     "isubo": "bin/index.js"
@@ -11,22 +11,26 @@
     "test": "jest",
     "esm-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "only-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.dev.config.mjs",
-    "update-test-reports": "npm run esm-test && (git add ./reports && git commit -m 'update test reports') || git checkout ./reports"
+    "update-test-reports": "npm run esm-test && (git add ./reports && git commit -m 'update test reports') || git checkout ./reports",
+    "build": "rm -rf dist && rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/isaaxite/deploy-posts-to-github-issue.git"
   },
   "lib": [
-    "index.js",
-    "bin/index.js",
-    "lib/"
+    "dist/",
+    "LICENSE"
   ],
   "keywords": [
     "markdown",
     "deploy",
     "issue",
-    "issue-blog"
+    "issue-blog",
+    "github",
+    "blog",
+    "local",
+    "cli"
   ],
   "author": "isaaxite",
   "license": "MIT",
@@ -54,6 +58,9 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "jest": "^29.5.0",
-    "jest-html-reporter": "^3.10.0"
+    "jest-html-reporter": "^3.10.0",
+    "rollup": "^3.26.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
