--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "isubo": "bin/index.js"
+    "isubo": "dist/bin/index.js"
   },
   "scripts": {
     "test": "jest",
     "esm-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "only-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.dev.config.mjs",
     "update-test-reports": "npm run esm-test && (git add ./reports && git commit -m 'update test reports') || git checkout ./reports",
-    "build": "rm -rf dist && rollup -c rollup.config.js",
+    "build": "rm -rf dist && rollup -c rollup.config.js && sed -i '1i#!/usr/bin/env node' dist/bin/index.js",
     "toc": "markdown-toc $1 --maxdepth=3"
   },
   "repository": {
@@ -59,9 +59,9 @@
     "@jest/globals": "^29.5.0",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
+    "markdown-toc": "^1.2.0",
     "rollup": "^3.26.0",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "markdown-toc": "^1.2.0"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
