--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isubo",
-  "version": "0.0.11-beta.2",
+  "version": "0.0.11-alpha.0",
   "description": "deploy posts are written in markdown to github issue",
   "main": "dist/index.js",
   "type": "module",
