--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build": "rm -rf dist && rollup -c rollup.config.js && sed -i '1i#!/usr/bin/env node' dist/bin/index.js",
     "version": "node scripts/npm.version.js",
     "publish": "node scripts/npm.publish.js",
-    "toc": "markdown-toc $1 --maxdepth=3"
+    "toc": "markdown-toc $1 --maxdepth=3",
+    "prepare": "husky install",
+    "commitlint": "commitlint --edit"
   },
   "repository": {
     "type": "git",
@@ -56,7 +58,10 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@jest/globals": "^29.5.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
     "markdown-toc": "^1.2.0",
