--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "jest",
     "esm-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "only-test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.dev.config.mjs",
+    "only-test": "./jest.js",
     "update-test-reports": "npm run esm-test && (git add ./reports && git commit -m 'chore: update test reports') || git checkout ./reports",
     "build": "rm -rf dist && rollup -c rollup.config.js && sed -i '1i#!/usr/bin/env node' dist/bin/index.js",
     "version": "node scripts/npm.version.js",
