chore: add msw to mock create and update issues

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
     // },
     {
       "type": "node",
+      // "runtimeVersion": "16.20.1",
       "request": "launch",
       "name": "Launch Isubo",
       "skipFiles": [
