--- a/package.json
+++ b/package.json
@@ -61,10 +61,14 @@
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@jest/globals": "^29.5.0",
+    "@octokit/request": "^8.1.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
     "markdown-toc": "^1.2.0",
+    "msw": "^1.2.3",
+    "nock": "^9.6.1",
+    "node-fetch": "^3.3.2",
     "rollup": "^3.26.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-terser": "^7.0.2",
