--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "update-test-reports": "npm run esm-test && (git add ./reports && git commit -m 'chore: update test reports') || git checkout ./reports",
     "build": "rm -rf dist && rollup -c rollup.config.js && sed -i '1i#!/usr/bin/env node' dist/bin/index.js",
     "publish": "node scripts/npm.publish.js",
-    "toc": "markdown-toc $1 --maxdepth=3",
+    "toc-for": "node ./scripts/toc-for.js",
     "prepare": "husky install",
     "commitlint": "commitlint --edit",
     "postversion": "git push && git push origin --tags"
