chore: update owner at pkgjson

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "local",
     "cli"
   ],
-  "owner": "isaacgun",
+  "owner": "isaacgan",
   "author": "isaaxite",
   "license": "MIT",
   "bugs": {
