--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@isubo-org/publish": "0.0.2-alpha.1",
+    "@isubo-org/publish": "0.0.2",
     "@isubo-org/version": "0.0.2-alpha.6",
     "@jest/globals": "^29.5.0",
     "@octokit/request": "^8.1.1",
