--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,20 +22,23 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
-      - run: npx isubo-publish --skin-login --skin-build
+      - run: node ./scripts/build.js
 
-  publish-gpr:
+  publish-npm:
     needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: 'https://npm.pkg.github.com'
-      - run: node ./scripts/publish.js
+          registry-url: https://registry.npmjs.org/
+          
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - run: npx isubo-publish --skin-login --skin-build
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
