--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,13 +26,14 @@ jobs:
 
   publish-npm:
     needs: build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-          
+
       - name: Install pnpm
         run: npm install -g pnpm
 
