--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "@isubo-org/version": "0.0.2-alpha.6",
     "@jest/globals": "^29.5.0",
     "@octokit/request": "^8.1.1",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporter": "^3.10.0",
