--- a/__test__/assets/isubo.conf.yml
+++ b/__test__/assets/isubo.conf.yml
@@ -85,3 +85,23 @@ source_dir: __test__/source/
 ## 1: source
 ## 2: isubo-blog
 post_title_seat: 0
+
+# source_statement:
+#   enable: true
+#   blog: 
+#     title: '原文出处'
+#     body: '本文写于我的个人博客，Isaac Kam's Blog，欢迎讨论！'
+#   post_link:
+#     title: '原文链接'
+#     body: 'https://isaaxite.github.io/blog/resources/{{post_name}}'
+#   copyright:
+#     title: '版权声明'
+#     body: 本博客所有文章除特别声明外，均采用 © BY-NC-SA 许可协议。转载请注明出处！
+
+source_statement:
+  enable: true
+  content:
+  - 原文出处：本文写于我的个人博客，[Isaac Kam's Blog](https://isaaxite.github.io/blog/)，欢迎讨论！
+  - 原文链接：https://isaaxite.github.io/blog/resources/{{post_name}}
+  - 版权声明：本博客所有文章除特别声明外，均采用 © BY-NC-SA 许可协议。转载请注明出处！
+  - Power By：[Isubo](https://www.npmjs.com/package/isubo) | A lightweight issue-blog CLI.
