--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/isaaxite/deploy-posts-to-github-issue#readme",
   "dependencies": {
-    "@isubo-org/init-conf": "^0.0.1",
+    "@isubo-org/init-conf": "0.0.2-beta.0",
     "chalk": "^5.2.0",
     "clipboardy": "^3.0.0",
     "fast-glob": "^3.2.12",
